--- a/package.json
+++ b/package.json
@@ -7,15 +7,32 @@
   },
   "dependencies": {
     "@hapi/iron": "6.0.0",
+    "@material-ui/core": "^4.12.2",
+    "clsx": "^1.1.1",
     "cookie": "0.4.1",
     "next": "latest",
     "next-connect": "0.8.1",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.1",
+    "react-icons": "^4.2.0",
     "swr": "^0.5.5",
     "uuid": "8.3.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.2"
+  }
 }
