--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@hapi/iron": "6.0.0",
     "@material-ui/core": "^4.12.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "clsx": "^1.1.1",
     "cookie": "0.4.1",
     "next": "latest",
