--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@hapi/iron": "6.0.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "cookie": "0.4.1",
     "next": "latest",
