--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hapi/iron": "6.0.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
-    "clsx": "^1.1.1",
-    "cookie": "0.4.1",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
+    "express-session": "^1.17.1",
+    "mongodb": "^3.6.10",
     "next": "latest",
     "next-connect": "0.8.1",
     "passport": "0.4.1",
@@ -21,8 +22,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.1",
     "react-icons": "^4.2.0",
-    "swr": "^0.5.5",
-    "uuid": "8.3.1"
+    "swr": "^0.3.9",
+    "validator": "^13.6.0"
   },
   "license": "MIT",
   "devDependencies": {
