--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
+    "babel-jest": "^27.0.6",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "express-session": "^1.17.1",
@@ -22,11 +27,14 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.1",
     "react-icons": "^4.2.0",
+    "react-test-renderer": "^17.0.2",
     "swr": "^0.3.9",
     "validator": "^13.6.0"
   },
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.0.1",
@@ -37,6 +45,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2"
   }
 }
