--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.0.1",
@@ -43,9 +46,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.6",
-    "babel-jest": "^27.0.6",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^2.3.2"
   }
 }
